// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prop-usage-locations Three levels - alias 1`] = `
Object {
  "source": "
      export const myStory = ({ name: { first, last }, age }) => (
        <>
          <Story first={first} last={last} />
          <Age value={age} />
        </>
      );    
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 31,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 24,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 16,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 11,
                      "line": 0,
                    },
                  },
                  "name": "first",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 23,
                          "line": 2,
                        },
                        "start": Object {
                          "column": 18,
                          "line": 2,
                        },
                      },
                    },
                  ],
                  "value": "first",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 22,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 0,
                    },
                  },
                  "name": "last",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 35,
                          "line": 2,
                        },
                        "start": Object {
                          "column": 31,
                          "line": 2,
                        },
                      },
                    },
                  ],
                  "value": "last",
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 29,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 3,
                    },
                    "start": Object {
                      "column": 16,
                      "line": 3,
                    },
                  },
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "({ name: { first, last }, age }) => (
  <>
    <Story first={first} last={last} />
    <Age value={age} />
  </>
)",
    },
  },
}
`;

exports[`prop-usage-locations adjust lines 1`] = `
Object {
  "parameters": Array [
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 2,
        },
        "start": Position {
          "column": 2,
          "line": 2,
        },
      },
      "name": "name",
      "value": "Hello",
    },
  ],
  "source": "
      export default {
        name: 'Hello',
      }

      export const myStory = props => (
        <Story
         {...props}
        />
      );

    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 25,
                  "line": 0,
                },
                "start": Object {
                  "column": 20,
                  "line": 0,
                },
              },
            },
          ],
          "value": "props",
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 52,
          "line": 5,
        },
        "start": Object {
          "column": 23,
          "line": 5,
        },
      },
      "name": "myStory",
      "source": "props => <Story {...props} />",
    },
  },
  "title": undefined,
}
`;

exports[`prop-usage-locations empty body 1`] = `
Object {
  "source": "export const story = ({ name }) => name;",
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 18,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 14,
                      "line": 0,
                    },
                  },
                },
              ],
              "value": "name",
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 39,
          "line": 1,
        },
        "start": Object {
          "column": 21,
          "line": 1,
        },
      },
      "name": "story",
      "source": "({ name }) => name",
    },
  },
}
`;

exports[`prop-usage-locations expression usage 1`] = `
Object {
  "source": "export const selectProp = ({ value }) => <div>{JSON.stringify({ value }, null, 2)}</div>;",
  "stories": Object {
    "selectProp": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "value",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 30,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 25,
                      "line": 1,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 30,
                        "line": 1,
                      },
                      "start": Object {
                        "column": 25,
                        "line": 1,
                      },
                    },
                    "name": "value",
                  },
                },
              ],
              "value": "value",
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 3,
        },
        "start": Object {
          "column": 26,
          "line": 1,
        },
      },
      "name": "selectProp",
      "source": "({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
)",
    },
  },
}
`;

exports[`prop-usage-locations multiple usage 1`] = `
Object {
  "source": "
      export const myStory = ({ age }) => (
        <>
          <Story name={name} age={age} />
          <Age value={age} />
        </>  
      );
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 6,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 31,
                      "line": 2,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 2,
                    },
                  },
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 3,
                    },
                    "start": Object {
                      "column": 16,
                      "line": 3,
                    },
                  },
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "({ age }) => (
  <>
    <Story name={name} age={age} />
    <Age value={age} />
  </>
)",
    },
  },
}
`;

exports[`prop-usage-locations nested arguments 1`] = `
Object {
  "source": "
export const story = ({ height, weight, style: { border, color } }) => (
  <div height={height} weight={weight} border={border} color={color} />
);",
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 45,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "height",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 1,
                    },
                  },
                },
              ],
              "value": "height",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 17,
                  "line": 0,
                },
                "start": Object {
                  "column": 11,
                  "line": 0,
                },
              },
              "name": "weight",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 37,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 31,
                      "line": 1,
                    },
                  },
                },
              ],
              "value": "weight",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 43,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "style",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 34,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 0,
                    },
                  },
                  "name": "border",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 53,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 47,
                          "line": 1,
                        },
                      },
                    },
                  ],
                  "value": "border",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 41,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 36,
                      "line": 0,
                    },
                  },
                  "name": "color",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 67,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 62,
                          "line": 1,
                        },
                      },
                    },
                  ],
                  "value": "color",
                },
              ],
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 3,
        },
        "start": Object {
          "column": 21,
          "line": 1,
        },
      },
      "name": "story",
      "source": "({ height, weight, style: { border, color } }) => (
  <div height={height} weight={weight} border={border} color={color} />
)",
    },
  },
}
`;

exports[`prop-usage-locations props argument 1`] = `
Object {
  "source": "
      export const myStory = props => <Story {...props} />;
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 25,
                  "line": 0,
                },
                "start": Object {
                  "column": 20,
                  "line": 0,
                },
              },
            },
          ],
          "value": "props",
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 52,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "props => <Story {...props} />",
    },
  },
}
`;

exports[`prop-usage-locations string template 1`] = `
Object {
  "source": "export const myStory = ({ text }) => \`\${text}\`;",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "text",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 0,
                    },
                  },
                },
              ],
              "value": "text",
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 46,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "({ text }) => \`\${text}\`",
    },
  },
}
`;

exports[`prop-usage-locations two arguments 1`] = `
Object {
  "source": "
      export const myStory = (props, context) => <Story {...props} />;
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 6,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 36,
                  "line": 0,
                },
                "start": Object {
                  "column": 31,
                  "line": 0,
                },
              },
            },
          ],
          "value": "props",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 0,
            },
            "start": Object {
              "column": 8,
              "line": 0,
            },
          },
          "name": "context",
          "value": "context",
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 63,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "(props, context) => <Story {...props} />",
    },
  },
}
`;

exports[`prop-usage-locations two levels - alias 1`] = `
Object {
  "source": "
      export const myStory = ({ name: MyName, age }) => <Story name={MyName} age={age} />;
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 22,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 1,
                    },
                  },
                },
              ],
              "value": "MyName",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 0,
                },
                "start": Object {
                  "column": 17,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 31,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 1,
                    },
                  },
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 3,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "({ name: MyName, age }) => (
  <Story name={MyName} age={age} />
)",
    },
  },
}
`;

exports[`prop-usage-locations two levels sub arguments 1`] = `
Object {
  "source": "
      export const myStory = ({ name, age }) => <Story name={name} age={age} />;
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 36,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 32,
                      "line": 0,
                    },
                  },
                },
              ],
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 46,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 43,
                      "line": 0,
                    },
                  },
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "loc": Object {
        "end": Object {
          "column": 73,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "({ name, age }) => <Story name={name} age={age} />",
    },
  },
}
`;
